--- a/vmk2022.html
+++ b/vmk2022.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
+<title>VMK2022</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
 <div class="w3-container">
   <h2 w3-center>Vorschüler 2022</h2>
-  <p w3-center>Melanchthon Kindergarten</p>
+  <p w3-center>Melanchthon Kindergarten Schwetzingen</p>
 
   <ul class="w3-ul w3-border w3-card-4 w3-center w3-hoverable">
     <li>Enya</li>
